--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine
 
 WORKDIR /app
 COPY package.json .
-RUN npm install
+RUN yarn
 COPY . .
 
-CMD ["npm", "start"]
+CMD ["yarn", "start"]
