--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -24,13 +24,13 @@ spec:
                 name: auth-srv
                 port:
                   number: 3000
-          # - pathType: Prefix
-          #   path: '/api/tickets/?(.*)'
-          #   backend:
-          #     service:
-          #       name: tickets-srv
-          #       port:
-          #         number: 3000
+          - pathType: Prefix
+            path: '/api/tickets/?(.*)'
+            backend:
+              service:
+                name: tickets-srv
+                port:
+                  number: 3000
           # - pathType: Prefix
           #   path: '/api/orders/?(.*)'
           #   backend:
