--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -31,13 +31,13 @@ spec:
                 name: tickets-srv
                 port:
                   number: 3000
-          # - pathType: Prefix
-          #   path: '/api/orders/?(.*)'
-          #   backend:
-          #     service:
-          #       name: orders-srv
-          #       port:
-          #         number: 3000
+          - pathType: Prefix
+            path: '/api/orders/?(.*)'
+            backend:
+              service:
+                name: orders-srv
+                port:
+                  number: 3000
           # - pathType: Prefix
           #   path: '/?(.*)'
           #   backend:
