--- a/orders/Dockerfile
+++ b/orders/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine
 
 WORKDIR /app
 COPY package.json .
-RUN npm install --only=prod
+RUN yarn install
 COPY . .
 
-CMD ["npm", "start"]
+CMD ["yarn", "start"]
