--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -33,14 +33,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    # - image: brhamill/orders
-    #   context: orders
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: 'src/**/*.ts'
-    #         dest: .
+    - image: brhamill/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     # - image: brhamill/expiration
     #   context: expiration
     #   docker:
