--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -10,13 +10,13 @@ spec:
     - host: ticketing.dev
       http:
         paths:
-          # - pathType: Prefix
-          #   path: '/api/payments/?(.*)'
-          #   backend:
-          #     service:
-          #       name: payments-srv
-          #       port:
-          #         number: 3000
+          - pathType: Prefix
+            path: '/api/payments/?(.*)'
+            backend:
+              service:
+                name: payments-srv
+                port:
+                  number: 3000
           - pathType: Prefix
             path: '/api/users/?(.*)'
             backend:
