--- a/payments/package.json
+++ b/payments/package.json
@@ -20,28 +20,27 @@
   "license": "ISC",
   "dependencies": {
     "@sgtickets/common": "^1.0.24",
-    "@types/cookie-session": "^2.0.39",
-    "@types/express": "^4.17.3",
-    "@types/jsonwebtoken": "^8.3.8",
-    "@types/mongoose": "^5.7.8",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^6.4.0",
+    "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "5.11.15",
+    "mongoose": "6.0.7",
     "mongoose-update-if-current": "^1.4.0",
-    "node-nats-streaming": "^0.2.6",
-    "stripe": "^8.49.0",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.176.0"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/supertest": "^2.0.8",
-    "jest": "^25.2.7",
-    "mongodb-memory-server": "^6.5.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "^25.3.1"
+    "@types/cookie-session": "^2.0.43",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.2.1",
+    "mongodb-memory-server": "^7.4.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.3"
   }
 }
