--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -49,11 +49,11 @@ build:
     #     manual:
     #       - src: 'src/**/*.ts'
     #         dest: .
-    # - image: brhamill/payments
-    #   context: payments
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: 'src/**/*.ts'
-    #         dest: .
+    - image: brhamill/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
