--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -41,14 +41,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    # - image: brhamill/expiration
-    #   context: expiration
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: 'src/**/*.ts'
-    #         dest: .
+    - image: brhamill/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     - image: brhamill/payments
       context: payments
       docker:
