--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -38,10 +38,10 @@ spec:
                 name: orders-srv
                 port:
                   number: 3000
-          # - pathType: Prefix
-          #   path: '/?(.*)'
-          #   backend:
-          #     service:
-          #       name: client-srv
-          #       port:
-          #         number: 3000
+          - pathType: Prefix
+            path: '/?(.*)'
+            backend:
+              service:
+                name: client-srv
+                port:
+                  number: 3000
