--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -17,14 +17,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    # - image: brhamill/client
-    #   context: client
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: '**/*.js'
-    #         dest: .
+    - image: brhamill/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .
     - image: brhamill/tickets
       context: tickets
       docker:
