--- a/auth/package.json
+++ b/auth/package.json
@@ -1,43 +1,6 @@
 {
   "name": "auth",
   "version": "1.0.0",
-  "description": "auth service",
   "main": "index.js",
-  "scripts": {
-    "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --watchAll --no-cache",
-    "test:ci": "jest"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "./src/test/setup.ts"
-    ]
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@sgtickets/common": "^1.0.24",
-    "cookie-session": "^1.4.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^6.12.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.7"
-  },
-  "devDependencies": {
-    "@types/cookie-session": "^2.0.43",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.2",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/supertest": "^2.0.11",
-    "jest": "^27.2.1",
-    "mongodb-memory-server": "^7.4.1",
-    "supertest": "^6.1.6",
-    "ts-jest": "^27.0.5",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.3"
-  }
+  "license": "MIT"
 }
