--- a/infra/k8s/auth-mongo-depl.yaml
+++ b/infra/k8s/auth-mongo-depl.yaml
@@ -1,28 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-mongo-depl
+  name: authold-mongo-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth-mongo
+      app: authold-mongo
   template:
     metadata:
       labels:
-        app: auth-mongo
+        app: authold-mongo
     spec:
       containers:
-        - name: auth-mongo
+        - name: authold-mongo
           image: mongo:4.4.8
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-mongo-srv
+  name: authold-mongo-srv
 spec:
   selector:
-    app: auth-mongo
+    app: authold-mongo
   ports:
     - name: db
       protocol: TCP
