--- a/infra/k8s/authold-depl.yaml
+++ b/infra/k8s/authold-depl.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-depl
+  name: authold-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth
+      app: authold
   template:
     metadata:
       labels:
-        app: auth
+        app: authold
     spec:
       containers:
-        - name: auth
-          image: brhamill/auth
+        - name: authold
+          image: brhamill/authold
           env:
             - name: MONGO_URI
-              value: 'mongodb://auth-mongo-srv:27017/auth'
+              value: 'mongodb://authold-mongo-srv:27017/authold'
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
@@ -27,12 +27,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-srv
+  name: authold-srv
 spec:
   selector:
-    app: auth
+    app: authold
   ports:
-    - name: auth
+    - name: authold
       protocol: TCP
       port: 3000
       targetPort: 3000
