api-gateway initial phase

--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -11,16 +11,9 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: '/api/gateway/?(.*)'
+            path: '/?(.*)'
             backend:
               service:
                 name: apigateway-srv
-                port:
-                  number: 3000
-          - pathType: Prefix
-            path: '/api/auth/?(.*)'
-            backend:
-              service:
-                name: auth-srv
                 port:
                   number: 3000
