--- a/infra/k8s/apigateway-depl.yaml
+++ b/infra/k8s/apigateway-depl.yaml
@@ -16,6 +16,9 @@ spec:
         - name: apigateway
           image: brhamill/apigateway
           env:
+            - name: REDIS_URI
+              value: apigateway-redis-srv
+
             - name: AUTH_BASE_URI
               value: 'http://auth-srv:3000/v1'
 ---
